small spacing fix, li padding

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,10 +32,10 @@ body {
 }
 
 code {
-  padding: 0.125rem 0.2rem;
+  padding: 0.175rem 0.25rem;
   border-radius: 5px;
   font-size: 0.875rem;
-  background-color: rgb(230, 230, 230);
+  background-color: rgba(0, 0, 0, 0.0675);
 }
 
 pre {
