--- a/styles/pages/post/[slug].module.scss
+++ b/styles/pages/post/[slug].module.scss
@@ -12,6 +12,11 @@
   & ul {
     margin-bottom: 1rem;
     list-style-position: inside;
+    padding: 0 0.75rem;
+
+    & > li {
+      margin: 0.5rem 0;
+    }
   }
 }
 
